# StatusWatch

./: .replit  Procfile  README.md  anomaly_detection.py  app.py  auth.py  database_schema_optimized.sql  external_monitors.py  fix_icon_paths.py  import_services.py  integration_service.py  main.py  migrate_database.py  models.py  models_optimized.py  monitor.py  outage_detector.py  pyproject.toml  replit.md  routes.py  stream_processor.py  update_service_icons.py
attached_assets/: Pasted--Backend-Logic-of-Outage-Detection-like-Downdetector-1-Data-Ingestion-Layer-Sources-of-reports-1756893175078_1756893175079.txt  Pasted--Nom-de-SGBD-MySQL-5-0--1756895626653_1756895626654.txt  Pasted-000webhost-123-Net-15Five-1Password-1st-Source-Bank-2600hertz-2k-360-Broadband-4chan-7-Days-1756892787306_1756892787309.txt  Pasted-1-Crowdsourced-Detection-Downdetector-style-This-is-how-Downdetector-works-Input-User-reports-1756900629056_1756900629057.txt  Pasted-Build-a-full-stack-web-application-similar-to-Downdetector-using-Flask-as-the-backend-and-simple-HTM-1756824908084_1756824908084.txt  Pasted-The-source-list-for-the-Content-Security-Policy-directive-default-src-contains-an-invalid-source--1756895041856_1756895041857.txt  Pasted-dashboard-js-11-Uncaught-socket-io-EIO-4-transport-polling-t-PaF1cfJ-sid-ukT8w19Jo3i6okdbAAAD-1--1756894712283_1756894712284.txt
static/js/: admin.js  admin_dashboard.js  dashboard.js  dashboard_simple.js  service-detail.js
templates/: admin.html  admin_dashboard.html  base.html  dashboard.html  login.html  monitoring.html  service_detail.html
