[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask-socketio>=5.5.1",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
    "requests>=2.32.5",
    "geoip2>=5.1.0",
    "maxminddb>=2.8.2",
    "ipaddress>=1.0.23",
    "gevent>=23.0.0",
    "flask-compress>=1.18",
    "trafilatura>=2.0.0",
    "pika>=1.3.2",
    "scikit-learn>=1.7.1",
    "tweepy>=4.16.0",
    "google-api-python-client>=2.181.0",
    "redis>=6.4.0",
    "kafka-python>=2.2.15",
    "beautifulsoup4>=4.13.5",
    "celery>=5.5.3",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
]
